--- a/templates/costos/provider_list.html
+++ b/templates/costos/provider_list.html
@@ -5,6 +5,7 @@
 {% block title %} A&B Cost - Providers {% endblock %}
 {%block content %}
  <!-- Page Heading -->
+<div class="container">
    <div class="d-sm-flex align-items-center justify-content-between mb-4">
        <h1 class="h3 mb-0 text-gray-800">{% trans "Providers" %}</h1>
        <a href="{% url 'provider_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
@@ -34,5 +35,6 @@
 {% else %}
 <p/>No Providers found </p>
 
-{% endif %}
+	{% endif %}
+</div>
 {% endblock %}}
