--- a/templates/costos/company_create.html
+++ b/templates/costos/company_create.html
@@ -5,12 +5,16 @@
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Compañia Nueva {% endblock %}
 {%block content %}
-<div class="text-center"><h1 class="h3 mb-0 text-gray-800">Nueva Compañia</h1>
- </div>
  <body class="bg-gradient-primary">
   <div class="container">
    <div class="row justify-content-center">
      <div class="col-xl-10 col-lg-12 col-md-9">
+         <div>
+             <a href="{% url 'provider_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+              {% trans "+ Provider" %}</a>
+             <a href="{% url 'add_recipe' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+              {% trans "+ Recipe" %}</a>
+         </div>
        <div class="card o-hidden border-0 shadow-lg my-5">
          <div class="card-body p-3">
            <div class="form-group">
