--- a/templates/costos/company_list.html
+++ b/templates/costos/company_list.html
@@ -4,23 +4,35 @@
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Companies {% endblock %}
 {%block content %}
-<h2>All Companies </h2>
+ <!-- Page Heading -->
+<div class="container">
+   <div class="d-sm-flex align-items-center justify-content-between mb-4">
+       <h1 class="h3 mb-0 text-gray-800">{% trans "Company" %}</h1>
+       <a href="{% url 'add_company' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+              {% trans "+ Company" %}</a>
+   </div>
+  {% if company_list %}
   <div class="row">
-	  {% for object in object_list %}
-   <div class="col-xl-3 col-md-6 mb-4">
-  		<div class="card border-left-primary shadow h-100 py-2">
-			<div class="card-body">
-				<div class="row no-gutters align-items-center">
-					<div class="col mr-2">
-						<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-						{{object.description}}</div>
-						<div class="h5 mb-0 font-weight-bold text-gray-800">{{ object.name }} {{ object.description }}</div>
+	{% for company in company_list %}
+   		<div class="col-xl-3 col-md-6 mb-4">
+  			<div class="card border-left-primary shadow h-100 py-2">
+				<div class="card-body">
+					<div class="row no-gutters align-items-center">
+						<div class="col mr-2">
+							<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+								{{Company.description}}</div>
+							<div class="h5 mb-0 font-weight-bold text-gray-800">
+								<a class="text-rest" href="{% url 'company_detail' company.id %}">{{company.id}} {{ company.name }} </a>
+							</div>
                        </div>
                    </div>
-			</div>
+				</div>
            </div>
-   </div>
-{% endfor %}
+   		</div>
+    {% endfor %}
  </div>
-
+{% else %}
+<p/>No company found </p>
+{% endif %}
+</div>
 {% endblock %}}
