--- a/templates/costos/dashboard.html
+++ b/templates/costos/dashboard.html
@@ -182,7 +182,7 @@
 
                         <!-- Content Column -->
                         <div class="col-lg-6 mb-4">
-
+                        <!-- Content Column -->
                             <!-- Project Card Example -->
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
@@ -301,8 +301,7 @@
                                 </div>
                                 <div class="card-body">
                                     <div class="text-center">
-                                        <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;"
-                                            src="img/undraw_posting_photo.svg" alt="...">
+                                        <img class="img-fluid" src="{% static 'img/s-ayblogo.png' %}" alt="...">
                                     </div>
                                     <p>Add some quality, svg illustrations to your project courtesy of <a
                                             target="_blank" rel="nofollow" href="https://undraw.co/">unDraw</a>, a
