--- a/templates/costos/ingredient_create.html
+++ b/templates/costos/ingredient_create.html
@@ -3,19 +3,28 @@
 {%load static %}
 {% load crispy_forms_tags %}
 {% block meta_desc %} A&B Cost {% endblock %}
-{% block title %} A&B Cost - Ingrediente Nuevo{% endblock %}
+{% block title %} A&B Cost - Ingredient {% endblock %}
 {%block content %}
- <body class="bg-gradient-primary">
+
+<body class="bg-gradient-primary" xmlns="http://www.w3.org/1999/html">
   <div class="container">
    <div class="row justify-content-center">
      <div class="col-xl-10 col-lg-12 col-md-9">
+         <div>
+             <a href="{% url 'provider_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+              {% trans "+ Provider" %}</a>
+             <a href="{% url 'add_recipe' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+              {% trans "+ Recipe" %}</a>
+             <a href="{% url 'ingredient_list' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+              {% trans "All Ingredients" %}</a>
+         </div>
        <div class="card o-hidden border-0 shadow-lg my-5">
          <div class="card-body p-3">
             <div class="row">
                 <div class="col">
                     <form method="post" >
                     {% csrf_token %}
-                    {{ form | crispy }}
+                    {{ form | crispy}}
                         <button class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" type="submit">
                             <span aria-hidden="true">Submit</span>
                         </button>
