--- a/templates/costos/ingredient_detail.html
+++ b/templates/costos/ingredient_detail.html
@@ -4,18 +4,54 @@
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - Ingredient Detail {% endblock %}
 {%block content %}
-    {% if message %}
-        <ul class="messages">
-            {% for message in messages %}
-                <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-<h1>Ingredient</h1>
-<h2>{{ ingredient.name }} {{ ingredient.type}}</h2>
+<body class="bg-gradient-primary" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+  <div class="container-fluid">
+      <div class="d-sm-flex align-items-center justify-content-between mb-4">
+        <h1 class="h3 mb-0 text-gray-800">{{ ingredient.name}}</h1>
+        <a href="{% url 'ingredient_list' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+               class="fas fa-utensils fa-sm text-white-50"></i> All Ingredients</a>
+      </div>
 
-<p>
-    <a href="{% url 'ingredient_edit' pk=ingredient.pk %}" role="button" class="btn btn-primary w-100 mb-2">Edit Ingredient</a>
-    <a href="{% url 'IngredientViewList' %}" role="button" class="btn btn-secundary w-100">Ingredients</a>
-</p>
+       <div class="row justify-content-center">
+         <div class="col-xl-10 col-lg-12 col-md-9">
+             <div>
+                 <a href="{% url 'ingredient_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                        {% trans "+ Ingredient" %}</a>
+                 <a href="{% url 'provider_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                  {% trans "+ Provider" %}</a>
+                 <a href="{% url 'add_recipe' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                  {% trans "+ Recipe" %}</a>
+             </div>
+             <div class="card o-hidden border-1 shadow-lg my-5">
+                <div class="card-body p-3">
+                    <div class="row">
+                        <div class="col">
+
+                            <div class="text-center">
+                                {% if message %}
+                                    <ul class="messages">
+                                        {% for message in messages %}
+                                            <li>{{ message }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                {% endif %}
+                            </div>
+                            <div class="card-header py-3">
+                                        <h1 class="m-0 font-weight-bold text-primary">{{ ingredient.name }} {{ ingredient.price }}</h1>
+                            </div>
+                            <h2>{{ ingredient.qty1 }} {{ ingredient.presentation }}</h2>
+                                <h3>{{ ingredient.provider  }}</h3>
+                                    <h4>{{ ingredient.chef }}</h4>
+                                        <h5>{{ ingredient.decrease }}%</h5>
+                                                <p> cost gmu: {{ ingredient.cost_gmu }}</p>
+                                                <p> created on: {{ ingredient.created_on }}
+                                                    <br>
+                                                    last update: {{ ingredient.updated_on }}
+                                                </p>
+                        </div></div></div></div>
+                        <p>
+                            <a href="{% url 'ingredient_edit' pk=ingredient.pk %}" role="button" class="btn btn-primary w-100 mb-2">Edit Ingredient</a>
+                            <a href="{{request.META.HTTP_REFERER}}" role="button" class="btn btn-secundary w-100">Cancel</a>
+                        </p>
+       </div></div></div></body>
 {% endblock %}}
