--- a/templates/costos/provider_create.html
+++ b/templates/costos/provider_create.html
@@ -5,13 +5,17 @@
 {% block meta_desc %} A&B Cost {% endblock %}
 {% block title %} A&B Cost - New Provider {% endblock %}
 {%block content %}
-<div class="text-center"><h1 class="h3 mb-0 text-gray-800">New Provider</h1>
- </div>
  <body class="bg-gradient-primary">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-xl-10 col-lg-12 col-md-9">
-                <div class="card o-hidden border-0 shadow-lg my-5">
+                <div>
+                    <a href="{% url 'ingredient_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                    {% trans "+ Ingredient" %}</a>
+                    <a href="{% url 'add_recipe' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                    {% trans "+ Recipe" %}</a>
+                </div>
+                <div class="card o-hidden border-1 shadow-lg my-5">
                     <div class="card-body p-3">
                         <div class="form-group">
                             <form action="" method="POST">
