--- a/templates/costos/provider_detail.html
+++ b/templates/costos/provider_detail.html
@@ -2,26 +2,55 @@
 {% load i18n %}
 {%load static %}
 {% block meta_desc %} A&B Cost {% endblock %}
-{% block title %} {{ provider.name }} Details {% endblock %}
+{% block title %} {{ provider.name }} | Details {% endblock %}
 {%block content %}
-    {% if message %}
-        <ul class="messages">
-            {% for message in messages %}
-                <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-<h3>{{provider.name}} Details</h3>
-<div class="d-flex d-flex-inline"><span class="">Email:</span><h5>{{provider.email}}</h5></div>
-<hr>
-    {% for ingredient in provider.Ingredient_provider.all %}
-    <a class="text-reset" href="{% url 'ingredient_detail' ingredient.id %}" >Ingredient Id: {{ ingredient.id}}</a>
-    <div> Name: {{ ingredient.name }}</div>
-    <div> Price: {{ ingredient.price }}</div>
-    <hr>
-    {% endfor %}
-<p>
-    <a href="{% url 'provider_ingredients_edit' pk=provider.pk %}" role="button" class="btn btn-primary w-100 mb-2">Edit Provider Ingredients</a>
-    <a href="{% url 'provider_list' %}" role="button" class="btn btn-secundary w-100">Cancel</a>
-</p>
-{% endblock content %}}
+<body class="bg-gradient-primary" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+  <div class="container">
+   <div class="row justify-content-center">
+     <div class="col-xl-10 col-lg-12 col-md-9">
+         <div>
+              <a href="{% url 'provider_edit' pk=provider.pk %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+              {% trans "Edit" %}</a>
+             <a href="{% url 'ingredient_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                    {% trans "+ Ingredient" %}</a>
+             <a href="{% url 'provider_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+              {% trans "+ Provider" %}</a>
+             <a href="{% url 'add_recipe' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+              {% trans "+ Recipe" %}</a>
+         </div>
+         <div class="card o-hidden border-1 shadow-lg my-5">
+            <div class="card-body p-3">
+                <div class="row">
+                    <div class="col">
+
+                        <div class="text-center">
+                            {% if message %}
+                                <ul class="messages">
+                                    {% for message in messages %}
+                                        <li>{{ message }}</li>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
+                        </div>
+                        <div class="card-header py-3">
+                                    <h6 class="m-0 font-weight-bold text-primary">{{ provider.name }}</h6>
+                        </div>
+                          <p>
+                              {{provider.contact}}
+                              {{provider.web}}
+                              {{provider.email}}
+                              {{ provider.country }}
+                              {{ provider.extra_street }}
+                              {{ provider.street }} {{ provider.city }} {{ provider.state }}
+
+                          </p>
+
+                    </div></div></div></div>
+                    <p>
+
+                        <a href="{% url 'provider_ingredient_update' pk=provider.pk %}" role="button" class="btn btn-primary w-100 mb-2">Update Provider Ingredients</a>
+                        <a href="{% url 'provider_list' %}" role="button" class="btn btn-secundary w-100">Cancel</a>
+
+                    </p>
+     </div></div></div></body>
+{% endblock %}}
