--- a/templates/costos/recipe_create.html
+++ b/templates/costos/recipe_create.html
@@ -3,14 +3,19 @@
 {%load static %}
 {% load crispy_forms_tags %}
 {% block meta_desc %} A&B Cost {% endblock %}
-{% block title %} A&B Cost - Receta Nueva {% endblock %}
+{% block title %} A&B Cost - New Recipe {% endblock %}
 {%block content %}
-<div class="text-center"><h1 class="h3 mb-0 text-gray-800">Nueva Receta</h1>
- </div>
+
  <body class="bg-gradient-primary">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-xl-10 col-lg-12 col-md-9">
+                <div>
+                    <a href="{% url 'provider_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                    {% trans "+ Provider" %}</a>
+                    <a href="{% url 'ingredient_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+                    {% trans "+ Ingredient" %}</a>
+                </div>
                 <div class="card o-hidden border-0 shadow-lg my-5">
                     <div class="card-body p-3">
                         <div class="form-group">
@@ -22,13 +27,11 @@
 
                                 {% csrf_token %}
                                 {{ form.non_form_errors }}
-                                {% for field in form %}
-                                    {{ field.errors }}
-                                    {{ field.label_tag }} {{field }}
-                                {% endfor %}
+                                {{ form | crispy}}
+
                                 <p class="pt-2">
-                                    <button type="submit" class="btn btn-primary w-100 mb-2">Add Receta</button>
-                                    <a href="{% url 'RecetaViewList' %}" role="button" class="btn btn-secondary w-100">Cancel</a>
+                                    <button type="submit" class="btn btn-primary w-100 mb-2">Add Recipe</button>
+                                    <a href="{% url 'recipe_list' %}" role="button" class="btn btn-secondary w-100">Cancel</a>
                                 </p>
                             </form>
                         </div>
