--- a/templates/costos/recipe_edit.html
+++ b/templates/costos/recipe_edit.html
@@ -3,8 +3,11 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block meta_desc %} A&B Cost {% endblock %}
-{% block title %} A&B Cost - Ingredient Edit {% endblock %}
+{% block title %} A&B Cost - Recipe Edit {% endblock %}
 {%block content %}
+<head>
+    {{ form.media }}
+</head>
  <body class="bg-gradient-primary">
     <div class="container">
         <div class="row justify-content-center">
@@ -16,7 +19,7 @@
                                 {% csrf_token %}
                                   {{ form.management_form }}
                                   {{ form.non_form_errors }}
-                                    <h3> {{ ingredient.name }}</h3>
+                                    <h3> {{ recipe.name }}</h3>
                                         {{ form | crispy }}
                                     <hr>
                                     {% for hidden_field in items_form.hidden_fields %}
