--- a/templates/costos/register.html
+++ b/templates/costos/register.html
@@ -11,7 +11,10 @@
             <div class="card-body p-0">
                 <!-- Nested Row within Card Body -->
                 <div class="row">
-                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                    <div class="col-lg-5 d-none d-lg-block ">
+                        <img class="img-fluid" src="{% static 'img/s-ayblogo.png' %}" alt="...">
+                            <img class="img-fluid" src="{% static 'img/undraw_chef_cu-0-r.svg' %}" alt="...">
+                    </div>
                     <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
