--- a/templates/costos/restaurant_create.html
+++ b/templates/costos/restaurant_create.html
@@ -3,7 +3,7 @@
 {%load static %}
 {% load crispy_forms_tags %}
 {% block meta_desc %} A&B Cost {% endblock %}
-{% block title %} A&B Cost - Restaurante Nuevo {% endblock %}
+{% block title %} A&B Cost - New Restaurant {% endblock %}
 {%block content %}
 <div class="text-center"><h1 class="h3 mb-0 text-gray-800">New Restaurant</h1>
  </div>
