--- a/templates/costos/restaurant_list.html
+++ b/templates/costos/restaurant_list.html
@@ -5,34 +5,40 @@
 {% block title %} A&B Cost - Restaurants {% endblock %}
 {%block content %}
  <!-- Page Heading -->
+<div class="container">
    <div class="d-sm-flex align-items-center justify-content-between mb-4">
        <h1 class="h3 mb-0 text-gray-800">{% trans "Restaurants" %}</h1>
        <a href="{% url 'restaurant_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
               {% trans "+ Restaurant" %}</a>
    </div>
-{% if restaurant_list %}
-  <div class="row">
+	{% if restaurant_list %}
+  	<div class="row">
 	{% for restaurant in restaurant_list %}
    		<div class="col-xl-3 col-md-6 mb-4">
-  			<div class="card border-left-primary shadow h-100 py-2">
-				<div class="card-body">
-					<div class="row no-gutters align-items-center">
-						<div class="col mr-2">
-							<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+			<a href="{% url 'restaurant_create' %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+              {% trans "+ Restaurant" %}</a>
+			   <div class="card o-hidden border-0 shadow-lg my-5">
+					<div class="card-body">
+						<div class="row no-gutters align-items-center">
+							<div class="col mr-2">
+								<div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
 								{{restaurant.description}}</div>
-							<div class="h5 mb-0 font-weight-bold text-gray-800">
+								<div class="h5 mb-0 font-weight-bold text-gray-800">
 								<a class="text-rest" href="{% url 'restaurant_detail' restaurant.id %}">{{ restaurant.name }}</a>
 							</div>
-                       </div>
-                   </div>
-				</div>
-           </div>
+                       		</div>
+                   		</div>
+					</div>
+			   </div>
    		</div>
 	{% endfor %}
- </div>
+ 	</div>
+
+</div>
 
 {% else %}
 <p/>No Restaurant found </p>
 
 {% endif %}
+
 {% endblock %}}
